<resources>
    <string name="app_name">SPARTAX</string>
    <string name="facebook_app_id">1793103290936525</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string-array name="array_names">
        <item>"Anastasia Druzhinina"</item>
        <item>"Andriy Hristyan"</item>
        <item>"Dmitriy Dovbnya"</item>
        <item>"Dmitry Denisenko"</item>
        <item>"Eduard Baev"</item>
        <item>"Iliya Bershadskiy"</item>
        <item>"Kirill Penzykov"</item>
        <item>"Konstantin Rudenko"</item>
        <item>"Oleksii Shliama"</item>
        <item>"Pavel Apisov"</item>
        <item>"Vadim Ooleynik"</item>
    </string-array>
    <string name="title_following">Following</string>
    <string name="toolbar_bio">Bio</string>
    <string name="toolbar_details">Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Classes</string>
    <string name="navigation_item_3">Trainers</string>
    <string name="navigation_item_4">Events</string>
    <string name="navigation_item_5">Exercises</string>
    <string name="navigation_item_6">My Info</string>
    <string name="navigation_item_7">Settings</string>
    <string name="navigation_item_9">Gallerie</string>
    <string name="navigation_item_8">Sing Out</string>
    <string name="action_share">Share</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="date">Date</string>
    <string name="durationn">Final Day</string>
    <string name="location">Location</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="titleA">tab1</string>
    <string name="titleB">scheduleOwnFragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trainer">Trainer : </string>
    <string name="Hour">Hour : </string>
    <string name="duration">Duration : </string>
    <string name="booking">Booking</string>
    <string name="class_room">room</string>
    <string-array name="image_ids">

        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
    </string-array>
    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="paintings_titles">
        <item>Event1</item>
        <item>Event2</item>
        <item>Event3</item>
        <item>Event4</item>
        <item>Event5</item>
    </string-array>
    <string-array name="paintings_years">
        <item>16/12/2016</item>
        <item>17/12/2016</item>
        <item>18/12/2016</item>
        <item>19/12/2016</item>
        <item>20/12/2016</item>
    </string-array>
    <string-array name="paintings_locations">
        <item>Hotel 1, Hammamet</item>
        <item>Hotel 2, Sousse</item>
        <item>Hotel 3, Gammart</item>
        <item>Hotel 4, Bizert</item>
        <item>Hotel 5, Tabarka</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_exercise_list">Exercise List</string>
    <string name="title_activity_workouts">Workouts</string>
    <string name="title_activity_routines">Routines</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_exercise_details">ExerciseDetailsActivity</string>
    <string name="placeholder_ex_info"><b>&#8226;Main Muscle Worked </b>: %1$s\n
                        <b>&#8226;Secondary Muscles </b>: %2$s\n
                        <b>&#8226;Mechanics Type </b>: %3$s\n
                        <b>&#8226;Equipment</b> : %4$s</string>
    <string name="placeholder_ex_description">1.Grab the pull-up bar with the palms facing forward using the prescribed grip.Note on grips: For a wide grip, your hands need to be spaced out at a distance wider than your shoulder width.For a medium grip, your hands need to be spaced out at a distance equal to your shoulder width and for a close grip at a distance smaller than your shoulder width.
                                    \n\n 2.As you have both arms extended in front of you holding the bar at the chosen grip width, bring your torso back around 30 degrees or so while creating a curvature on your lower back and sticking your chest out. This is your starting position.
                                    \n\n 3.Pull your torso up until the bar touches your upper chest by drawing the shoulders and the upper arms down and back. Exhale as you perform this portion of the movement. Tip: Concentrate on squeezing the back muscles once you reach the full contracted position. The upper torso should remain stationary as it moves through space and only the arms should move. The forearms should do no other work other than hold the bar.
                                    \n\n 4.After a second on the contracted position, start to inhale and slowly lower your torso back to the starting position when your arms are fully extended and the lats are fully stretched.
                                    \n\n 5.Repeat this motion for the prescribed amount of repetitions.</string>
    <string name="title_activity_edit_workout">Edit Workout</string>
    <string name="title_activity_sets">SetsAct</string>
    <string name="title_activity_edit_routine">Edit Routine</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_edit_profile">Profile Details</string>
    <string name="title_activity_profile">Profile Activity</string>
    <string name="action_main">Pedometer</string>
    <string name="action_training">Training</string>
</resources>