<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

            <TextView
                android:paddingTop="40dp"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/trainer"
                android:textSize="30dp"
                />


            <TextView
                android:id="@+id/trainer"
                android:textSize="30dp"
                android:textColor="@color/colorAccent"

                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="Mahmoud" />



        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="30dp"
                android:paddingTop="80dp"
                android:layout_width="wrap_content"
                android:textColor="@color/colorAccent"

                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/Hour" />

            <TextView
                android:id="@+id/hour"
                android:paddingTop="40dp"
                android:paddingLeft="30dp"
                android:textSize="30dp"
                android:textColor="@color/colorAccent"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="12H00" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="30dp"
                android:textColor="@color/colorAccent"

                android:paddingTop="120dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/duration" />


            <TextView
                android:id="@+id/duration"
                android:paddingTop="40dp"
                android:paddingLeft="15dp"
                android:textColor="@color/colorAccent"

                android:textSize="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="60minutes" />


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking"
            android:onClick="Booking"
            />
    </RelativeLayout>

</LinearLayout>